--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=320,initial-scale=1,maximum-scale=1">
+  </head>
+  
   <body>
     <script src="./e.js"></script>
   </body>
